--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ textarea.form-control { height: inherit; }
 .block-38 .block-38-header img { width: 90px; border-radius: 50%; margin-bottom: 20px; }
 
 #constructionjunction{
-    background-image: url("/Users/simranjobanputra/Desktop/strategy/images/CJ/Artboard.png");
+    background-image: url("images/CJ/Artboard.png");
     width:1280px;
     margin-top:100px;
 }
