made changes to the intro of CJ

--- a/css/style.css
+++ b/css/style.css
@@ -477,4 +477,12 @@ textarea.form-control { height: inherit; }
     margin-right:20px;
 }
 
+#push{
+    position:relative;
+    margin-top:110px;
+}
 
+#peep{
+    position:relative;
+    margin-right:40px;
+}
