push changes for miranda

--- a/css/style.css
+++ b/css/style.css
@@ -532,3 +532,8 @@ textarea.form-control { height: inherit; }
     position:relative;
     margin-top:225px;
 }
+
+#companalysis3{
+    position:relative;
+    margin-top:45px;
+}
