--- a/css/style.css
+++ b/css/style.css
@@ -610,6 +610,11 @@ li a.fixed:hover:not(.active2) {
     margin-left:250px;
 }
 
+#centering2{
+    position:relative;
+    margin-left:100px;
+}
+
 #moveit{
     position:relative;
     margin-top:75px;
