--- a/css/style.css
+++ b/css/style.css
@@ -615,6 +615,11 @@ li a.fixed:hover:not(.active2) {
     margin-left:100px;
 }
 
+#centering3{
+    position:relative;
+    margin-left:180px;
+}
+
 #moveit{
     position:relative;
     margin-top:75px;
