--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,11 @@ li a.fixed:hover:not(.active2) {
     margin-left:180px;
 }
 
+#centering4{
+    position:relative;
+    margin-left:55px;
+}
+
 #moveit{
     position:relative;
     margin-top:75px;
