--- a/css/style.css
+++ b/css/style.css
@@ -669,6 +669,11 @@ li a.fixed:hover:not(.active2) {
     margin-top:60px;
 }
 
+#moveit3{
+    position:relative;
+    margin-top:110px;
+}
+
 
 * {box-sizing:border-box}
 
