--- a/css/style.css
+++ b/css/style.css
@@ -573,6 +573,11 @@ textarea.form-control { height: inherit; }
 
 #pushdown2{
     position:relative;
+    margin-top:30px;
+}
+
+#pushdown2{
+    position:relative;
     margin-top:80px;
 }
 
